--- a/resources/styles/style.css
+++ b/resources/styles/style.css
@@ -1,12 +1,19 @@
-* {
-    padding: 0;
-    margin: 0;
-}
-
-body {
-    background-color: aqua;
-}
-
 header {
     background-image: url("../images/pattern.jpg");
+}
+
+h1 {
+    font-family: Helvetica;
+    font-size: 100px;
+    font-weight: bold;
+    color: khaki;
+    text-align: center;
+}
+
+h2 {
+    font-family: Helvetica;
+    font-size: 32px;
+    font-weight: bold;
+    color: white;
+    background-color: mediumspringgreen;
 }
