--- a/resources/styles/style.css
+++ b/resources/styles/style.css
@@ -1,9 +1,12 @@
+body {
+    font-family: Helvetica;
+}
+
 header {
     background-image: url("../images/pattern.jpg");
 }
 
 h1 {
-    font-family: Helvetica;
     font-size: 100px;
     font-weight: bold;
     color: khaki;
@@ -11,9 +14,24 @@ h1 {
 }
 
 h2 {
-    font-family: Helvetica;
     font-size: 32px;
     font-weight: bold;
     color: white;
+}
+
+span {
+    font-weight: bold;
+    color: blue;
+}
+
+#brushes {
     background-color: mediumspringgreen;
+}
+
+#frames {
+    background-color: lightcoral;
+}
+
+#paint {
+    background-color: skyblue;
 }
