--- a/resources/styles/style.css
+++ b/resources/styles/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family: Helvetica;
+    font-family: Helvetica, sans-serif;
 }
 
 header {
@@ -11,6 +11,7 @@ h1 {
     font-weight: bold;
     color: khaki;
     text-align: center;
+    word-wrap: break-word;
 }
 
 h2 {
