--- a/resources/styles/style.css
+++ b/resources/styles/style.css
@@ -4,10 +4,12 @@ body {
 
 header {
     background-image: url("../images/pattern.jpg");
+    display: flex;
+    justify-content: center;
 }
 
 h1 {
-    font-size: 100px;
+    font-size: 15vmin;
     font-weight: bold;
     color: khaki;
     text-align: center;
@@ -15,7 +17,7 @@ h1 {
 }
 
 h2 {
-    font-size: 32px;
+    font-size: 6vmin;
     font-weight: bold;
     color: white;
 }
